log

Wed 13 Mar 2024 08:38:01 PM UTC: 
 tests:  0|7
total_score: 0/70
1d762fd
Wed 13 Mar 2024 08:43:20 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:17: error: expected expression before ‘]’ token
   13 |   int max = arr[];
      |                 ^
Compilation failed
b6e329b
Wed 13 Mar 2024 08:44:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
bbd1b3d
Wed 13 Mar 2024 08:48:57 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
a0bb704
Wed 13 Mar 2024 08:51:43 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
9e70b81
Wed 13 Mar 2024 08:53:45 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
0632013
Wed 13 Mar 2024 09:00:17 PM UTC: 
 exercises.c | 52 ++++++++++++++++++++++++++--------------------------
 1 file changed, 26 insertions(+), 26 deletions(-)
 tests:  0|4
total_score: 30/70
728889f
Wed 13 Mar 2024 09:00:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:31: error: invalid operands to binary / (have ‘int *’ and ‘int’)
   28 |   for (int i = 0; i < arreglo / 2; i++){
      |                               ^
Compilation failed
d4c197e
Wed 13 Mar 2024 09:01:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
a0e923f
Wed 13 Mar 2024 09:05:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
98f0294
Wed 13 Mar 2024 09:11:37 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
c44f3ed
Fri 15 Mar 2024 11:31:57 PM UTC: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c266aff
Fri 15 Mar 2024 11:32:57 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:82:47: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   82 | int checkSorted(int arr[], int size) { return NULL;}
      |                                               ^~~~
cc1: all warnings being treated as errors
Compilation failed
b1a55db
